--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-Hello world!
+    <head>
+        <a href = "\">
+            <image src="/images/IMG_4274.JPG" alt="return to homepage">
+        </a>
+        <title>insta485</title>
+    </head>
+    <body>
+        <div style="border: 1px solid black">
+            post goes here
+        </div>
+    </body>
 </html>
