hand-coding finished, setup for static generator

--- a/html/users/awdeorio/index.html
+++ b/html/users/awdeorio/index.html
@@ -1,4 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-    Hello World!
+    <head>
+        <title> insta485 </title>
+        <link rel="stylesheet" href="/css/style.css">
+    </head>
+    <body>
+        <header>
+            <a href = "/">
+                <img src="/images/logo.png" alt="return to homepage" style="width:500px;">
+            </a>
+            <span style="float: right;">
+                <a href="/explore/">explore</a>
+                 | 
+                <a href="/users/awdeorio/">awdeorio</a>
+            </span>
+        </header>
+        <hr>
+        <div class="userpage-main">
+            <div class="userpage-header">
+                <header class="userpage-username">
+                    awdeorio
+                </header>
+                <p class="userpage-followbar">
+                    2 posts
+                    <a href="/users/awdeorio/followers/"><b>2 followers</b></a>
+                    <a href="/users/awdeorio/following/"><b>2 following</b></a>
+                </p>
+                <p class="userpage-fullname">
+                    Andrew DeOrio
+                </p>
+            </div>
+            <div class="userpage-gallery">
+                <div class="gallery-img">
+                    <a href="/posts/1/">
+                        <img src="/uploads/122a7d27ca1d7420a1072f695d9290fad4501a41.jpg" alt="post1" style="width: 450px;margin:auto">
+                    </a>
+                </div>
+                <div class="gallery-img">
+                    <a href="/posts/3/">
+                        <img src="/uploads/9887e06812ef434d291e4936417d125cd594b38a.jpg" alt="post3" style="width: 450px; margin:auto">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
