fixed urls in hand-coded

--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="post-comment-section">
                     <div class="comment">
-                        <a href="/users/awdeorio">
+                        <a href="/users/awdeorio/">
                             <b>awdeorio</b> 
                         </a>
                         <p>
@@ -49,7 +49,7 @@
                         </p>
                     </div>
                     <div class="comment">
-                        <a href="/users/jflinn">
+                        <a href="/users/jflinn/">
                             <b>jflinn</b> 
                         </a>
                         <p>
@@ -57,7 +57,7 @@
                         </p> 
                     </div>
                     <div class="comment">
-                        <a href="/users/michjc">
+                        <a href="/users/michjc/">
                             <b>michjc</b> 
                         </a> 
                         <p>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="post-comment-section">
                     <div class="comment">
-                        <a href="/users/awdeorio">
+                        <a href="/users/awdeorio/">
                             <b>awdeorio</b> 
                         </a> 
                         <p>
@@ -125,13 +125,13 @@
                 </div>
                 <div class="post-comment-section">
                     <div class="comment">
-                        <a href="/users/jflinn">
+                        <a href="/users/jflinn/">
                             <b>jflinn</b> 
                         </a>
                         Walking the plank #chickensofinstagram
                     </div>
                     <div class="comment">
-                        <a href="/users/awdeorio">
+                        <a href="/users/awdeorio/">
                             <b>awdeorio</b> 
                         </a>
                         This was after trying to teach them to do a #crossword
